Fianl Courney alignment Fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-    border-top: solid 0.25em;
+    border-bottom: solid 0.25em;
 }
 
 blockquote footer,
